<resources>
    <string name="app_name">SettingPreferance</string>
    <string name="settings">Settings</string>
<string name="setSettings">Set Settings</string>
    <string name="pref_security_settings">Security Settings</string>
    <string name="pref_screen_lock">Screen Lock</string>
    <string name="pref_screen_lock_summary">Lock The Screen With Password</string>
    <string name="pref_reminder_update">Reminder for updation</string>
    <string name="pref_reminder_update_summary">Set Update Reminder Frequency</string>

    <string name="pref_user_profile">Settings</string>
    <string name="pref_password">Password</string>
    <string name="pref_password_summary">Set Your Password</string>
</resources>
