<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <PreferenceCategory android:title="@string/pref_user_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditTextPreference
            android:title="@string/pref_password"
            android:summary="@string/pref_password_summary"
            android:key="prefPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_security_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefScreenLock"
            android:summary="@string/pref_screen_lock_summary"
            android:title="@string/pref_screen_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </CheckBoxPreference>

        <ListPreference
            android:key="prefReminder"
            android:entries="@array/reminder_update"
            android:summary="@string/pref_reminder_update_summary"
            android:entryValues="@array/reminderUpdateValues"
            android:title="@string/pref_reminder_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </PreferenceCategory>
</PreferenceScreen>

